chore: replace run_tests_with_timeout.ps1 with run_tests.ps1 for improved test execution and output handling
- Removed the old run_tests_with_timeout.ps1 script.
- Introduced run_tests.ps1, which supports various execution modes, logging, and profiling.
- Enhanced output capturing for better debugging and error reporting during tests.
- Updated test execution logic to handle compilation errors and provide detailed feedback.